--- a/client/src/styles/detailsTravel.scss
+++ b/client/src/styles/detailsTravel.scss
@@ -24,6 +24,9 @@
             padding-top: 47px;
             font-size: 72px;
             font-weight: bold;
+            @media only screen and (max-width:414px) {
+                padding-top: 0px;
+            }
         }
         p{
             text-align: left;
@@ -62,6 +65,9 @@
             font-style: italic;
             font-size: 48px;
             font-weight:500;
+            @media only screen and (max-width:414px) {
+                padding-bottom: 30px;
+            }
         }
         p {
            font-size: 32px;
@@ -111,6 +117,9 @@
             font-weight: bold;
             line-height: 1.75;
             padding-bottom: 60px;
+            @media only screen and (max-width:414px) {
+                font-size: 12px;
+            }
         }
 
         .hotelCard {
@@ -206,6 +215,7 @@
         }
         @media only screen and (max-width:414px) {
             padding: 0 20px;
+            font-size: 18px;
         }
     }
   }
