--- a/client/src/styles/hisHers.scss
+++ b/client/src/styles/hisHers.scss
@@ -5,6 +5,16 @@
         font-size: 72px;
         font-weight: bold;
         padding-bottom: 80px;
+        @media only screen and (max-width:414px) {     
+            br {
+            display: none;
+            }
+    }
+   
+        @media only screen and (max-width:414px) {
+            font-size: 36px;
+
+        }
     }
 }
 .bridalParty {
