--- a/client/src/styles/homeHero.scss
+++ b/client/src/styles/homeHero.scss
@@ -38,20 +38,21 @@
         display: flex;
         justify-content: center;
         margin: 0 auto;
-        max-width: 100%;
+        min-width: 100%;
         position: relative;
         height: 100%;
         object-fit: cover;
         // outline: 5px solid black;
         @media only screen and (max-width:768px) {
             object-fit: cover;
+            max-width: 100%;
             }  
         }
         &:after {
             content:'';
             height: 100%;
             width: 100%;
-            background-color: rgba(0,0,0,.2);
+            background-color: rgba(0,0,0,.4);
             position: absolute;
             display: block;
         }
@@ -66,7 +67,7 @@
         height: 100%;
         z-index: 1000;
         @media only screen and (max-width:414px){
-            margin:0 20px;
+            // margin:0 20px;
             width: auto;
         }
         h1 {
@@ -77,7 +78,6 @@
             width: 47%;
             margin: 0;
             text-shadow: 2px 1px 5px rgba(0,0,0,.75);
-      
             padding-left: 50vw;
             line-height: 1.25;
         @media only screen and (max-width:414px){
@@ -87,6 +87,7 @@
             justify-content: flex-start;
             align-items: center;
             margin-bottom: 40px;
+            margin-left: 30px;
         }
 
         }
@@ -105,6 +106,7 @@
                 padding-left: 0;
                 text-align: left;
                 padding-right:30%;
+                margin-left: 30px;
             }
             
         }
@@ -128,71 +130,7 @@
             background-color: black;
         }
         @media only screen and (max-width:414px){
-            margin-left: 0;
+            margin-left: 30px;
         }
     }
 }
-
-.coupleHero{
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: auto;
-    // width: 100%;
-    // animation: couplezoom 2s linear;
-    // transition: all 2s linear;
-  
-}
-
-@keyframes couplezoom {
-    0% {
-        width: 50%;
-    }
-    20% {
-        width: 60%;
-    }
-    40% {
-        width: 70%;
-    }
-    60% {
-        width: 80%;
-    }
-    80% {
-        width: 90%;
-    }
-    100% {
-        width: 100%;
-    }
-  }
-
-@keyframes herozoom {
-    0% {
-      background-size: 100%;
-      background-position: 50% 0%;
-    }
-    20% {
-        background-size: 110%;
-        background-position: 50% 20%;
-    }
-    40% {
-        background-size: 120%;
-        background-position: 50% 40%;
-    }
-    60% {
-        background-size: 130%;
-        background-position: 50% 60%;
-    }
-    80% {
-        background-size: 140%;
-      background-position: 50% 80%;
-    }
-    100% {
-        background-size: 150%;
-        background-position: 50% 100%;
-    }
-  }
-
-  .hero-container {
-    // animation: herozoom 2s linear;
-    // transition: all 2s linear;
- }
