--- a/client/src/styles/detailsTravel.scss
+++ b/client/src/styles/detailsTravel.scss
@@ -26,6 +26,7 @@
             font-weight: bold;
             @media only screen and (max-width:414px) {
                 padding-top: 0px;
+                font-size: 50px;
             }
         }
         p{
