--- a/client/src/styles/registry.scss
+++ b/client/src/styles/registry.scss
@@ -9,6 +9,10 @@
         display: flex;
         width: 100%;
         justify-content: center;
+        @media only screen and (max-width:414px) {
+            font-size: 50px;
+            padding-bottom: 20px;
+        }
     }
     p{
         display: flex;
