--- a/client/src/styles/detailsTravel.scss
+++ b/client/src/styles/detailsTravel.scss
@@ -33,6 +33,7 @@
             text-align: left;
             padding:20px 100px;
             font-size: 24px;
+            z-index: 1000;
             @media only screen and (max-width:414px) {
                padding:10px 40px!important;
             }
