--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -227,11 +227,11 @@
 .slide {
   height: 4px;
   width: 15px;
-  background-color: $burg;
+  background-color: $gold;
   display: block;
   margin-bottom: 10px;
   &.active {
-    background-color: white;
+    background-color: #8a7527;
     width: 20px;
   }
 }
@@ -242,7 +242,6 @@
   right: 50px;
   top: 50%;
   transform: translateY(-50%);
-  // border-right: 1px solid #a050d9;
   padding-right: 3px;
   z-index: 9999999999999999;
   li {
