--- a/client/src/styles/homeHero.scss
+++ b/client/src/styles/homeHero.scss
@@ -77,7 +77,7 @@
             font-size:3em;
             width: 47%;
             margin: 0;
-            text-shadow: 2px 1px 5px rgba(0,0,0,.75);
+            // text-shadow: 2px 1px 5px rgba(0,0,0,.75);
             padding-left: 50vw;
             line-height: 1.25;
         @media only screen and (max-width:414px){
@@ -99,7 +99,7 @@
             letter-spacing: 6px;
             font-size: 1em;
             padding-left: 8px;
-            text-shadow: 2px 1px 5px rgba(0,0,0,.75);
+            // text-shadow: 2px 1px 5px rgba(0,0,0,.75);
     
             padding-left: 50vw;
             @media only screen and (max-width:414px){
