--- a/client/src/styles/homeHero.scss
+++ b/client/src/styles/homeHero.scss
@@ -135,3 +135,10 @@
         }
     }
 }
+
+.homeHero {
+    @media only screen and (min-width:768px) and (max-width:1000px){
+        height: 100%!important;
+        margin-bottom: 60px;
+    }
+}
